namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-education-and-work-plan-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-education-and-work-plan-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "plp-dev"
    cloud-platform.justice.gov.uk/application: "HMPPS Education and Work Plan"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-education-and-work-plan-api"
    cloud-platform.justice.gov.uk/team-name: "farsight-devs"
    cloud-platform.justice.gov.uk/review-after: ""
